fix: fixed pr issues